# A-Bunny-s-Revenge

./: .gitignore  Low_Poly_Forest_treeTall01.glb  Low_Poly_Forest_treeTall02.glb  Low_Poly_Forest_treeTall03.glb  Low_Poly_Forest_treeTall04.glb  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1747513358967-744c9d034476b.mjs
.github/workflows/: build.yaml  publish.yaml
Low_Poly_Forest_treeTall04_out/: Low_Poly_Forest_treeTall04.gltf
assets/: animations.d.ts  animations.ts  assetManifest.json  assets.d.ts  assets.ts  boundingBox.json  soundsData.json  tagsList.json  tagsList.ts
assets/buttons/: texture.json
assets/characters/: ALICE_animated-optimized.glb  Archibald_animated-optimized.glb  Armabee-optimized.glb  (+96 more)
editor/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
editor/src-tauri/: 2  Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: auth.rs  git_operations.rs  lib.rs
patches/: vite-static-assets-plugin+1.2.2.patch
scripts/: assetPipeline.ts  convertAudioFiles.ts  convertFbx2GLB.ts  extractAnimations.ts  generateAssetManifest.ts  generateAssetNames.ts  generateAssetNamesPlugin.ts  optimizeAssets.ts  signAndroidRelease.sh  static-assets.ts
src/: FastNoiselite.d.ts  LDTKMap.ts  main.ts  static-assets.ts  style.css  sw.js  translations.ts  vite.end.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
test/: generateDungeon.test.ts
(+793 files in other folders)
