[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
git2 = "0.20.2"
tauri-plugin-fs = "2"
tauri-plugin-oauth = "2"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
tauri-plugin-opener = "2"
tauri-plugin-keyring = "0.1.0"
rand = "0.9.2"
sha2 = "0.10.9"
base64-url = "3.0.0"
tokio = "1.47.1"
